Use updated names for query parameters

--- a/wildfireai_api_quickstart.ipynb
+++ b/wildfireai_api_quickstart.ipynb
@@ -649,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -737,7 +737,7 @@
         "            yield item\n",
         "        # Use the last record id as the next cursor\n",
         "        cursor = data[-1].get(\"id\")\n",
-        "        params[\"first\"] = cursor\n",
+        "        params[\"olderThan\"] = cursor\n",
         "\n",
         "\n",
         "example_sensor = \"wind\"\n",
